@@ -1,7 +1,14 @@
+08 Aug 2004 mipsator
+ * added support for additional defines (keyword DEFS) in CHECK_HEADER,
+   CHECK_LIB, CHECK_TYPE and CHECK_VARIABLE.
+
+08 Aug 2004 mreindl
+ * added -fPIC in SLLDFLAGS for gcc.
+
 05 Aug 2004 mipsator
  * fixed makefile template of c++ lib sample.
 
-04 Aug 2004 mipsator
+04 Aug 2004 mreindl
  * sprinkle some -fPICs in c++ lib sample for AMD64 platform.
  * spacing nitpicking in pmkcomp.dat.
 
